--- a/src/Dessetbar.css
+++ b/src/Dessetbar.css
@@ -3,3 +3,13 @@ body {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   line-height: 1.8em;
 }
+
+h1 {
+  color: green;
+  font-size: 130%;
+}
+
+h2 {
+  color: blueviolet;
+  font-size: 150%;
+}
